<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_activity">О программе</string>
    <string name="app_description">Описание: \nПрограмма поможет легко и быстро рассчитать график выплат по потребительскому, либо ипотечному кредиту с аннуитетным способом погашения. \nОна рассчитывает сумму ежемесячного платежа, общую сумму платежа, сумму переплаты и дату закрытия кредита. \nТак же, имеется возможность посмотреть приблизительный график выплат по кредиту в виде таблицы, либо в виде линейного графика. \nПриведённые расчёты являются предварительными. Для точного расчёта по кредиту необходимо обратится в отделение конкретного банка.</string>
    <string name="app_name">Кредитный учёт</string>
    <string name="app_version">версия 1.1.1</string>
    <string name="cleaned">Очищено</string>
    <string name="copyright">Incretio© 2019, Москва</string>
    <string name="creditAmount">creditAmount</string>
    <string name="creditRate">creditRate</string>
    <string name="dateExtra">date</string>
    <string name="developer_email">Email: incretio@gmail.com</string>
    <string name="developer_name">Разработчик: Incretio</string>
    <string name="done">Готово</string>
    <string name="empty" />
    <string name="firstPayout">firstPayout</string>
    <string name="incorrectData">Некорректные данные</string>
    <string name="alreadyPaid">Ипотека выплачена</string>
    <string name="labelCreditAmount">Сумма кредита:</string>
    <string name="labelCreditRate">*Ставка, %:</string>
    <string name="labelFirstPayout">Первоначальный взнос:</string>
    <string name="labelMonthlyPayment">Ежемесячный платёж:</string>
    <string name="labelObjectPrice">*Стоимость объекта:</string>
    <string name="labelOverpaymentAmount">Сумма переплаты:</string>
    <string name="labelPayoutPeriod">*Срок кредитования, мес:</string>
    <string name="labelShortInterestPayment">Процент</string>
    <string name="labelShortMonthNumber">№</string>
    <string name="labelShortMonthlyPayment">Платёж</string>
    <string name="labelShortPaymentDate">Дата</string>
    <string name="labelShortPrincipalBalance">Остаток</string>
    <string name="labelShortPrincipalPayment">Долг</string>
    <string name="labelStartDate">Дата выдачи кредита:</string>
    <string name="labelStopDate">Дата закрытия кредита:</string>
    <string name="labelTotalAmountPayment">Общая сумма платежа:</string>
    <string name="loading">Загрузка...</string>
    <string name="logTag">CreditCalculationLog</string>
    <string name="monthlyPayment">monthlyPayment</string>
    <string name="objectPrice">objectPrice</string>
    <string name="overpaymentAmount">overpaymentAmount</string>
    <string name="payoutPeriod">payoutPeriod</string>
    <string name="startDate">startDate</string>
    <string name="stopDate">stopDate</string>
    <string name="totalAmountPayment">totalAmountPayment</string>
    <string name="zero">0</string>
    <string name="decimalZero">0.00</string>
</resources>
