<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/llTable" android:background="@drawable/border" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="horizontal" android:background="@drawable/border" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/labelShortMonthNumber" android:layout_weight="@dimen/monthNumberWeight" style="@style/tableTitle"/>
            <TextView android:text="@string/labelShortPaymentDate" android:layout_weight="@dimen/paymentDateWeight" style="@style/tableTitle"/>
            <TextView android:text="@string/labelShortPrincipalPayment" android:layout_weight="@dimen/defaultWeight" style="@style/tableTitle"/>
            <TextView android:text="@string/labelShortInterestPayment" android:layout_weight="@dimen/defaultWeight" style="@style/tableTitle"/>
            <TextView android:text="@string/labelShortMonthlyPayment" android:layout_weight="@dimen/defaultWeight" style="@style/tableTitle"/>
            <TextView android:text="@string/labelShortPrincipalBalance" android:layout_weight="@dimen/parincipalBalanceWeight" style="@style/tableTitle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
