<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/background" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labelObjectPrice" android:layout_weight="1" style="@style/CaptionText"/>
            <EditText android:id="@+id/edtObjectPrice" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="numberDecimal" style="@style/EditedTextView">
                <requestFocus/>
            </EditText>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labelFirstPayout" android:layout_weight="1" style="@style/CaptionText"/>
            <EditText android:id="@+id/edtFirstPayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="numberDecimal" style="@style/EditedTextView"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView3" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labelPayoutPeriod" android:layout_weight="1" style="@style/CaptionText"/>
            <EditText android:id="@+id/edtPayoutPeriod" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="numberDecimal" style="@style/EditedTextView"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView4" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labelCreditRate" android:layout_weight="1" style="@style/CaptionText"/>
            <EditText android:id="@+id/edtCreditRate" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="numberDecimal" style="@style/EditedTextView"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView5" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/labelStartDate" android:layout_weight="7" style="@style/CaptionText"/>
            <EditText android:enabled="false" android:id="@+id/edtStartDate" android:background="@android:drawable/editbox_background" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="5" android:inputType="date" android:onClick="onStartDateClick"/>
            <Button android:layout_gravity="center_vertical" android:id="@+id/btnChangeStartDate" android:layout_width="0dp" android:layout_height="match_parent" android:text="..." android:layout_weight="2" android:onClick="onBtnStartDateClick"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:layout_gravity="fill_horizontal" android:id="@+id/btnClear" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Очистить" android:layout_weight="1" android:onClick="onBtnClearClick" android:textIsSelectable="false"/>
            <Button android:layout_gravity="fill_horizontal" android:id="@+id/btnCalc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_column="1" android:text="Рассчитать" android:layout_weight="1" android:onClick="onBtnCalcClick" android:textIsSelectable="false" android:layout_row="5"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView6" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labelCreditAmount" android:layout_weight="1" style="@style/CaptionText"/>
            <TextView android:id="@+id/txtCreditAmount" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="date" style="@style/ResultText"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView7" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labelMonthlyPayment" android:layout_weight="1" style="@style/CaptionText"/>
            <TextView android:id="@+id/txtMonthlyPayment" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="date" style="@style/ResultText"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView8" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labelTotalAmountPayment" android:layout_weight="1" style="@style/CaptionText"/>
            <TextView android:id="@+id/txtTotalAmountPayment" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="date" style="@style/ResultText"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView9" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labelOverpaymentAmount" android:layout_weight="1" style="@style/CaptionText"/>
            <TextView android:id="@+id/txtOverpaymentAmount" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="date" style="@style/ResultText"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView10" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labelStopDate" android:layout_weight="1" style="@style/CaptionText"/>
            <TextView android:id="@+id/txtStopDate" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="date" style="@style/ResultText"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingTop="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
            <FrameLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <Button android:layout_gravity="center" android:background="@drawable/table" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="onBtnTableClick"/>
            </FrameLayout>
            <FrameLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <Button android:layout_gravity="center" android:background="@drawable/graphic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="onBtnGraphicClick"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
